--- a/learn-m365-pr/wwl/introduction-to-microsoft-defender-for-office-365/index.yml
+++ b/learn-m365-pr/wwl/introduction-to-microsoft-defender-for-office-365/index.yml
@@ -11,11 +11,11 @@ metadata:
 title: Examine Microsoft Defender for Office 365
 summary: This module examines how Microsoft Defender for Office 365 extends EOP protection by filtering targeted attacks such as zero-day attacks in email attachments and Office documents, and time-of-click protection against malicious URLs.
 abstract: |
-  By the end of this module, you will be able to:
-  - Describe how the Safe Attachments feature in Microsoft Defender for Office 365 blocks zero-day malware in email attachments and documents.
-  - Describe how the Safe Links feature in Microsoft Defender for Office 365 protects users from malicious URLs embedded in email and documents that point to malicious websites.
-  - Create outbound spam filtering policies.
-  - Unblock users who violated spam filtering policies so they can resume sending emails.
+  By the end of this module, you'll be able to:
+  *   Describe how the Safe Attachments feature in Microsoft Defender for Office 365 blocks zero-day malware in email attachments and documents.
+  *   Describe how the Safe Links feature in Microsoft Defender for Office 365 protects users from malicious URLs embedded in email and documents that point to malicious websites.
+  *   Create outbound spam filtering policies.
+  *   Unblock users who violated spam filtering policies so they can resume sending emails.
 prerequisites: |
   None
 iconUrl: /learn/achievements/office-365-defender.svg
