changed files by pdets auto publish service, publishid[cf547a92-1fe9-4d2e-8a4a-f585cf198a5f] and do [publish].

--- a/learn-m365-pr/wwl/manage-safe-links/2-create-policies-using-defender.yml
+++ b/learn-m365-pr/wwl/manage-safe-links/2-create-policies-using-defender.yml
@@ -17,7 +17,7 @@ content: |
 quiz:
   title: "Check your knowledge"
   questions:
-  - content: "As the Enterprise Administrator for Lucerne Publishing, Allan Deyoung wants to implement Safe Links in Microsoft Defender for Office 365. Allan prefers to use the Microsoft 365 Defender portal rather than PowerShell to implement Safe Links. Using the Microsoft 365 Defender portal, what must Allan do to implement Safe Links scanning of URLs at Lucerne Publishing?"
+  - content: "As the Enterprise Administrator for Lucerne Publishing, Allan Deyoung wants to implement Safe Links in Microsoft Defender for Office 365. Allan plans to use the Microsoft 365 Defender portal to implement Safe Links. What must Allan do to implement Safe Links scanning of URLs at Lucerne Publishing?"
     choices:
     - content: "Create a Safe Links rule"
       isCorrect: false
