--- a/learn-m365-pr/wwl/manage-safe-links/3-create-policies-using-powershell.yml
+++ b/learn-m365-pr/wwl/manage-safe-links/3-create-policies-using-powershell.yml
@@ -17,7 +17,7 @@ content: |
 quiz:
   title: "Check your knowledge"
   questions:
-  - content: "As the Enterprise Administrator for Contoso, Holly Dickson created a Safe Links policy using Exchange Online PowerShell. After navigating to the Safe Links page in the Microsoft 365 Defender portal, Holly couldn't find the Safe Links policy. What prevented the Safe Links policy that Holly created in PowerShell from appearing in the Microsoft 365 Defender portal?"
+  - content: "As the Enterprise Administrator for Contoso, Holly Dickson created a Safe Links policy using Exchange Online PowerShell. After Holly navigated to the Safe Links page in the Microsoft 365 Defender portal, she couldn't find the Safe Links policy. What prevented the Safe Links policy that Holly created in PowerShell from appearing in the Microsoft 365 Defender portal?"
     choices:
     - content: "Holly didn't create a safe links rule in the Microsoft 365 Defender portal"
       isCorrect: false
