--- a/learn-m365-pr/m365/viva-goals-okr-essentials/index.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-essentials/index.yml
@@ -3,9 +3,7 @@ uid: learn-m365.viva-goals-okr-essentials
 metadata:
   moduleType: standard
   title: viva-goals-okr-essentials
-  description: |
-  Learn the key components of OKRs, their framework, and the benefits they provide to users in various roles.
-  **IMPORTANT**: Viva Goals is currently available only for private preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
+  description: ""
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
