--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/index.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/index.yml
@@ -3,14 +3,12 @@ uid: learn-m365.viva-goals-create-track-close-okrs
 metadata:
   moduleType: standard
   title: viva-goals-create-track-close-okrs
-  description: |
-  Learn how to use Viva Goals and understand how it can enable your organization to use OKRs to their full potential.
-  **IMPORTANT**: Viva Goals is currently available only for private preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.] (https://go.microsoft.com/fwlink/?linkid=2189933)
+  description: ""
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
-  ms.prod: learning-azure
+  ms.prod: learning-m365
 title: viva-goals-create-track-close-okrs
 summary: "Learn how to use Viva Goals and understand how it can enable your organization to use OKRs to their full potential."
 abstract: |
