--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/how-okrs-align-within-viva-goals.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/how-okrs-align-within-viva-goals.yml
@@ -4,14 +4,12 @@ title: How OKRs align within Viva Goals
 metadata:
   unitType: learning-content
   title: How OKRs align within Viva Goals
-  description: |
-  Learn how to use Viva Goals and understand how it can enable your organization to use OKRs to their full potential.
-  **IMPORTANT**: Viva Goals is currently available only for private preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.] (https://go.microsoft.com/fwlink/?linkid=2189933)
+  description: ""
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
-  ms.prod: learning-azure # Edit as appropriate for your portfolio area
+  ms.prod: learning-m365
 durationInMinutes: 1
 content: |
   [!include[](includes/how-okrs-align-within-viva-goals.md)]
