FY22Q4 refresh - intro-microsoft-teams-apps
- run through all exercise steps in associated MSLearn module to validate good working order
- updated steps & fixed typos where necessary
- implement changes per Acrolinx feedback
- any & all users/names/company names/pictures/IDs are not real people/tenants... all are from M365 demo tenants provided by Microsoft

--- a/learn-m365-pr/m365-developer/intro-microsoft-teams-apps/5-knowledge-check.yml
+++ b/learn-m365-pr/m365-developer/intro-microsoft-teams-apps/5-knowledge-check.yml
@@ -3,7 +3,7 @@ uid: learn-m365.intro.microsoft.teams.apps.5-knowledge-check
 metadata:
   title: Knowledge check
   description: Check your knowledge.
-  ms.date: 12/01/2019
+  ms.date: 05/03/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
@@ -43,7 +43,7 @@ quiz:
       explanation: "You should only submit your app for publication to the public app store if you believe it's relevant for all Teams users everywhere."
     - content: "Distribute your app package for users to install directly."
       isCorrect: false
-      explanation: "Although technically possible, this would be a inefficient method of distribution for an entire organization."
+      explanation: "Although technically possible, this would be an inefficient method of distribution for an entire organization."
     - content: "Publish to the organizational app catalog."
       isCorrect: true
       explanation: "Apps in an organization app catalog can be installed by any user in that company with the correct permissions."
