--- a/learn-m365-pr/m365-developer/office-add-ins-excel/index.yml
+++ b/learn-m365-pr/m365-developer/office-add-ins-excel/index.yml
@@ -3,7 +3,7 @@ uid: learn-m365.office-add-ins-excel
 metadata:
   title: Build Office Add-ins for Excel
   description: This module walks through development of Office Add-ins for Microsoft Excel.
-  ms.date: 11/25/2020
+  ms.date: 05/03/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
@@ -11,7 +11,7 @@ metadata:
 title: Build Office Add-ins for Excel
 summary: Microsoft Office clients enable developers to create add-ins that extend Microsoft Excel with custom functionality. Through a JavaScript API, developers can manipulate the content in an Excel workbook from an app running in the task pane. In this module, you'll learn how to build an Excel add-in that inserts (and replaces) text ranges, tables, charts, and dialogs.
 abstract: |
-  By the end of this module, you will be able to:
+  By the end of this module, you'll be able to:
   - Create an Excel add-in that uses the Excel JavaScript API to manipulate a workbook
   - Demonstrate how to add and edit content in an Excel document
   - Explain how to deploy and host a custom add-in for Microsoft Excel
