FY22Q4 refresh - office-add-ins-outlook
- run through all exercise steps in associated MSLearn module to validate good working order
- updated steps & fixed typos where necessary
- implement changes per Acrolinx feedback
- any & all users/names/company names/pictures/IDs are not real people/tenants... all are from M365 demo tenants provided by Microsoft

--- a/learn-m365-pr/m365-developer/office-add-ins-outlook/5-exercise-commands-dialogs.yml
+++ b/learn-m365-pr/m365-developer/office-add-ins-outlook/5-exercise-commands-dialogs.yml
@@ -2,8 +2,8 @@
 uid: learn-m365.office-add-ins-outlook.5-exercise-commands-dialogs
 metadata:
   title: Exercise - Add buttons and commands
-  description: In this exercise, you'll add additional functionality to the add-in you created in a previous exercise. You'll create two new buttons that insert a specific gist or a default gist into a message. You'll also implement a first-run experience, prompting the user for their credentials to authenticate with GitHub to retrieve your gists.
-  ms.date: 03/01/2022
+  description: In this exercise, you'll add more functionality to the add-in you created in a previous exercise. You'll create two new buttons that insert a specific gist or a default gist into a message. You'll also implement a first-run experience, prompting the user for their credentials to authenticate with GitHub to retrieve your gists.
+  ms.date: 05/03/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
