changed files by pdets auto publish service, publishid[12549fcd-95f1-460b-b31f-7160cd1d2ff7] and do [publish].

--- a/learn-m365-pr/wwl/troubleshoot-exchange-online-configuration-issues/7-troubleshoot-configuration-issues.yml
+++ b/learn-m365-pr/wwl/troubleshoot-exchange-online-configuration-issues/7-troubleshoot-configuration-issues.yml
@@ -6,7 +6,7 @@ metadata:
   description: "Troubleshoot Exchange Online configuration issues"
   ms.date: 05/03/2022
   author: wwlpublish
-  ms.author: dawnhoppe
+  ms.author: dawnhopper
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
