--- a/learn-m365-pr/wwl/troubleshoot-problems-mail-flow/index.yml
+++ b/learn-m365-pr/wwl/troubleshoot-problems-mail-flow/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.troubleshoot-problems-mail-flow
 metadata:
   title: Troubleshoot problems with mail flow
   description: "Investigate and diagnose problems with email flow in your Exchange Online organization. Find issues caused by incorrect transport rules, DNS records, message headers, and other causes. MS-220"
-  ms.date: 04/08/2022
+  ms.date: 05/03/2022
   author: wwlpublish
   ms.author: dawnhopper
   ms.topic: interactive-tutorial
@@ -17,8 +17,8 @@ abstract: |
   *   Identify wrongly configured mail records in DNS.
   *   Troubleshoot issues with SMTP mail transfer.
 prerequisites: |
-  Experience with PowerShell and the Exchange PowerShell module.
-  Significant experience deploying, managing, and troubleshooting Exchange environments.
+  - Experience with PowerShell and the Exchange PowerShell module.
+  - Significant experience deploying, managing, and troubleshooting Exchange environments.
 iconUrl: /learn/achievements/generic-badge.svg
 levels:
 - advanced
@@ -36,6 +36,7 @@ units:
 - learn.wwl.troubleshoot-problems-mail-flow.troubleshoot-transport-rules-conditional-routing
 - learn.wwl.troubleshoot-problems-mail-flow.fix-dns-issues
 - learn.wwl.troubleshoot-problems-mail-flow.investigate-repair-smtp-issues
+- learn.wwl.troubleshoot-problems-mail-flow.troubleshoot-problems-mail-flow
 - learn.wwl.troubleshoot-problems-mail-flow.knowledge-check
 - learn.wwl.troubleshoot-problems-mail-flow.summary
 badge:
