--- a/learn-m365-pr/wwl/troubleshoot-problems-mail-flow/7-knowledge-check.yml
+++ b/learn-m365-pr/wwl/troubleshoot-problems-mail-flow/7-knowledge-check.yml
@@ -30,7 +30,7 @@ quiz:
       explanation: "Incorrect. Status code 5.2.x relates to submission quotas."
   - content: "A user complains that when they send email to a recipient in a partner organization, the delivery fails with a message that states the 'message conflicts with a policy'. The messaging administrator reviews the Mail flow rules and can't see any rules that might be impacting delivery. What else should they check?"
     choices:
-    - content: "The administrator should also check for Microsoft 365 Data Loss Prevention rules in the Microsoft 365 compliance center."
+    - content: "The administrator should also check for Microsoft 365 Data Loss Prevention rules in the compliance portal."
       isCorrect: true
       explanation: "Correct. DLP rules also prohibit the sending of messages that contain defined sensitive information types."
     - content: "The administrator should check for Azure AD Conditional Access policies."
