--- a/learn-m365-pr/wwl/troubleshoot-encryption-audit-journal/5-knowledge-check.yml
+++ b/learn-m365-pr/wwl/troubleshoot-encryption-audit-journal/5-knowledge-check.yml
@@ -39,14 +39,14 @@ quiz:
     - content: "Set-Mailbox -Identity serena.davis@contoso.com -DefaultAuditSet Admin"
       isCorrect: false
       explanation: "That's incorrect. The command returns the audit settings to their default values. Although these settings might include hard delete auditing for administrators, you wanted to avoid changing the existing audit properties for the mailbox."
-  - content: "You've set up journaling for all messages in your Exchange Online organization but journal reports are not reaching the journal mailbox. Which value should you edit?"
+  - content: "You've set up journaling for all messages in your Exchange Online organization but journal reports aren't reaching the journal mailbox. Which value should you edit?"
     choices:
     - content: "The recipient email address on the journaling rule."
       isCorrect: false
       explanation: "That's incorrect. When an email matches the recipient email address on a journaling rule it's journaled. The recipient email address doesn't specify where journal reports are sent."
     - content: "The alternate journaling mailbox for your organization."
       isCorrect: false
-      explanation: "That's incorrect. The alternate journaling mailbox is a destination used when the journal email address is not available."
+      explanation: "That's incorrect. The alternate journaling mailbox is a destination used when the journal email address isn't available."
     - content: "The journal email address on the journaling rule."
       isCorrect: true
       explanation: "That's correct. The journal email address determines where journal reports are sent. It must be the correct email address."
