Viva Goals - Get started module 1

--- a/learn-m365-pr/m365/viva-goals-okr-essentials/index.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-essentials/index.yml
@@ -2,15 +2,15 @@
 uid: learn-m365.viva-goals-okr-essentials
 metadata:
   moduleType: standard
-  title: viva-goals-okr-essentials
-  description: ""
-  ms.date: 04/28/2022
+  title: Learn OKR essentials with Viva Goals
+  description: Learn the key components of OKRs, their framework, and the benefits they provide to users in various roles.
+  ms.date: 05/04/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: viva-goals-okr-essentials
-summary: Learn the key components of OKRs, their framework, and the benefits they provide to users in various roles.
+summary: Learn the key components of OKRs, their framework, and the benefits they provide to users in various roles.br><br>**IMPORTANT** - Viva Goals is currently available only for private preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
 abstract: |
   By the end of this module, you'll be able to:
     - Define the key components of an OKR and articulate how they fit together in the OKR framework.
@@ -23,7 +23,6 @@ levels:
   - beginner
 roles: 
   - administrator
-  - student
 products: 
 - m365
 - viva
