--- a/learn-m365-pr/m365/viva-goals-okr-essentials/introduction.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-essentials/introduction.yml
@@ -4,7 +4,7 @@ title: Introduction
 metadata:
   unitType: introduction
   title: Introduction
-  description: ""
+  description: Introduction to the module
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
