--- a/learn-m365-pr/m365/viva-goals-okr-essentials/what-are-okrs.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-essentials/what-are-okrs.yml
@@ -4,8 +4,8 @@ title: What are OKRs?
 metadata:
   unitType: learning-content
   title: What are OKRs?
-  description: ""
-  ms.date: 04/28/2022
+  description: Learn the basics of OKRs.
+  ms.date: 05/04/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
