--- a/learn-m365-pr/m365/viva-goals-okr-essentials/what-to-expect.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-essentials/what-to-expect.yml
@@ -1,10 +1,10 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.viva-goals-okr-essentials.what-to-expect
-title: What to Expect
+title: What to expect
 metadata:
   unitType: learning-content
-  title: What to Expect
-  description: ""
+  title: What to expect
+  description: Learn what to expect when you use OKRs.
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
