--- a/learn-m365-pr/m365/viva-goals-okr-essentials/knowledge-check.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-essentials/knowledge-check.yml
@@ -1,6 +1,6 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.viva-goals-okr-essentials.knowledge-check
-title: Knowledge check
+title: Check your knowledge
 metadata:
   unitType: knowledge_check
   title: Check your knowledge
