--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/close---how-to-close-your-okrs.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/close---how-to-close-your-okrs.yml
@@ -4,12 +4,12 @@ title: Close - How to close your OKRs
 metadata:
   unitType: learning-content
   title: Close - How to close your OKRs
-  description: ""
+  description: Learn how to close and score OKR's
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
-  ms.prod: learning-azure # Edit as appropriate for your portfolio area
+  ms.prod: learning-m365
 durationInMinutes: 2
 content: |
   [!include[](includes/close---how-to-close-your-okrs.md)]
