--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/how-to-track-okr-progress.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/how-to-track-okr-progress.yml
@@ -4,12 +4,12 @@ title: How to track OKR progress
 metadata:
   unitType: learning-content
   title: How to track OKR progress
-  description: ""
+  description: Learn how to update the progress of OKR's
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
-  ms.prod: learning-azure # Edit as appropriate for your portfolio area
+  ms.prod: learning-m365
 durationInMinutes: 3
 content: |
   [!include[](includes/how-to-track-okr-progress.md)]
