--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/index.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/index.yml
@@ -3,14 +3,14 @@ uid: learn-m365.viva-goals-create-track-close-okrs
 metadata:
   moduleType: standard
   title: viva-goals-create-track-close-okrs
-  description: ""
+  description: Learn how to use Viva Goals and understand how it can enable your organization to use OKRs to their full potential.
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: viva-goals-create-track-close-okrs
-summary: "Learn how to use Viva Goals and understand how it can enable your organization to use OKRs to their full potential."
+summary: Learn how to use Viva Goals and understand how it can enable your organization to use OKRs to their full potential.
 abstract: |
   By the end of this module, you'll be able to:
     - Navigate your way around Viva Goals
