--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/introduction.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/introduction.yml
@@ -4,12 +4,12 @@ title: Introduction
 metadata:
   unitType: introduction
   title: introduction
-  description: ""
+  description: Understand what OKR's are and how they can help align objectives and key results
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
-  ms.prod: learning-azure # Edit as appropriate for your portfolio area
+  ms.prod: learning-m365
 durationInMinutes: 3
 content: |
   [!include[](includes/introduction.md)]
