--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/knowledge-check.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/knowledge-check.yml
@@ -4,12 +4,12 @@ title: Knowledge check
 metadata:
   unitType: knowledge_check
   title: Knowledge check
-  description: ""
+  description: Test your understanding of OKR's
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
-  ms.prod: learning-azure # Edit as appropriate for your portfolio area
+  ms.prod: learning-m365
 durationInMinutes: 1
 ###########################################################################
 ###
