--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/how-okrs-align-within-viva-goals.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/how-okrs-align-within-viva-goals.yml
@@ -4,7 +4,7 @@ title: How OKRs align within Viva Goals
 metadata:
   unitType: learning-content
   title: How OKRs align within Viva Goals
-  description: Learn how OKR's show objectivve, key results and projects and can cascade from one level to another.
+  description: Learn how OKR's show objectives, key results and projects and can cascade from one level to another.
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
