--- a/learn-m365-pr/m365/viva-goals-write-effective-okrs/writing-framework.yml
+++ b/learn-m365-pr/m365/viva-goals-write-effective-okrs/writing-framework.yml
@@ -4,7 +4,7 @@ title: Writing framework
 metadata:
   unitType: learning-content
   title: Writing framework
-  description: ""
+  description: Learn a basic writing framework for OKRs.
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
