--- a/learn-m365-pr/m365/viva-goals-write-effective-okrs/knowledge-check.yml
+++ b/learn-m365-pr/m365/viva-goals-write-effective-okrs/knowledge-check.yml
@@ -1,30 +1,16 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.viva-goals-write-effective-okrs.knowledge-check
-title: Knowledge check
+title: Check your knowledge
 metadata:
   unitType: knowledge_check
-  title: Knowledge check
-  description: ""
+  title: Check your knowledge
+  description: Check what you've learned about writing effective OKRs.
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 durationInMinutes: 1
-###########################################################################
-###
-### General guidance (https://review.docs.microsoft.com/learn-docs/docs/id-guidance-knowledge-check)
-###  - Questions are complete sentences ending with a question mark
-###  - No true/false questions
-###  - 3 answers per question
-###  - All answers about the same length
-###  - Numeric answers listed in sorted order
-###  - No "All of the above" and/or "None of the above" as answer choices
-###  - No "Not" or "Except" in questions
-###  - No second person ("you") in the questions or answers
-###  - Provide a meaningful explanation for both correct and incorrect answers
-###
-###########################################################################
 content: |
 quiz:
   questions:
