--- a/learn-m365-pr/m365/viva-goals-write-effective-okrs/okr-levels-and-alignment.yml
+++ b/learn-m365-pr/m365/viva-goals-write-effective-okrs/okr-levels-and-alignment.yml
@@ -4,7 +4,7 @@ title: OKR levels and alignment
 metadata:
   unitType: learning-content
   title: OKR levels and alignment
-  description: ""
+  description: Learn about levels and alignment for OKRs.
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
