--- a/learn-m365-pr/m365/viva-goals-write-effective-okrs/summary.yml
+++ b/learn-m365-pr/m365/viva-goals-write-effective-okrs/summary.yml
@@ -4,7 +4,7 @@ title: Summary
 metadata:
   unitType: summary
   title: Summary
-  description: ""
+  description: Review what you've learned about writing OKRs.
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
