--- a/learn-m365-pr/m365/viva-goals-write-effective-okrs/writing-best-practices.yml
+++ b/learn-m365-pr/m365/viva-goals-write-effective-okrs/writing-best-practices.yml
@@ -4,7 +4,7 @@ title: Writing best practices
 metadata:
   unitType: learning-content
   title: Writing best practices
-  description: ""
+  description: Learn best practices for writing OKRs.
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
