--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/navigating-viva-goals.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/navigating-viva-goals.yml
@@ -4,12 +4,12 @@ title: Navigating Viva Goals
 metadata:
   unitType: learning-content
   title: Navigating Viva Goals
-  description: ""
+  description: Learn how to navigate the Viva Goals screen
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
-  ms.prod: learning-azure # Edit as appropriate for your portfolio area
+  ms.prod: learning-m365
 durationInMinutes: 3
 content: |
   [!include[](includes/navigating-viva-goals.md)]
