--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/integrating-viva-goals-with-third-party-systems.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/integrating-viva-goals-with-third-party-systems.yml
@@ -4,12 +4,12 @@ title: Integrating Viva Goals with third party systems
 metadata:
   unitType: learning-content
   title: Integrating Viva Goals with third party systems
-  description: ""
+  description: Learn how Viva Goals works seamlessly with third party system
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
-  ms.prod: learning-azure # Edit as appropriate for your portfolio area
+  ms.prod: learning-m365
 durationInMinutes: 1
 content: |
   [!include[](includes/integrating-viva-goals-with-third-party-systems.md)]
