changed files by pdets auto publish service, publishid[26876c91-b34e-4c92-86be-b4d7b0046bd5] and do [publish].

--- a/learn-m365-pr/wwl/implement-advanced-hybrid-functionality/6-knowledge-check.yml
+++ b/learn-m365-pr/wwl/implement-advanced-hybrid-functionality/6-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 03/09/2022
+  ms.date: 05/04/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -21,10 +21,10 @@ quiz:
     choices:
     - content: "Enable the Exchange Online organization to access the on-premises Public Folder mailboxes by pointing to all the company's proxy Public Folder mailboxes"
       isCorrect: false
-      explanation: "This answer is incorrect. This item configures legacy Public Folder coexistence for Exchange Server 2010. Try again."
+      explanation: "This answer is incorrect. This item configures legacy Public Folder coexistence for Exchange Server 2010."
     - content: "Run Azure AD Connect"
       isCorrect: false
-      explanation: "This answer is incorrect. Running Azure AD Connect is a prerequisite to configuring Public Folder coexistence. Since Holly has satisfied the Public Folder coexistence requirements, this task is already complete. Try again."
+      explanation: "This answer is incorrect. Running Azure AD Connect is a prerequisite to configuring Public Folder coexistence. Since Holly has satisfied the Public Folder coexistence requirements, this task is already complete."
     - content: "Enable the Exchange Online organization to access the on-premises Public Folder mailboxes by pointing to the company's Public Folder mailboxes"
       isCorrect: true
       explanation: "This answer is correct. For Exchange Server 2013 or later, you must enable the Exchange Online organization to access the on-premises Public Folders by pointing to to your Public Folder mailboxes."
@@ -32,13 +32,13 @@ quiz:
     choices:
     - content: "When the hybrid deployment uses federated delegation"
       isCorrect: false
-      explanation: "This answer is incorrect. This item isn't a reason why an organization must manually configure OAuth. Try again."
+      explanation: "This answer is incorrect. This item isn't a reason why an organization must manually configure OAuth."
     - content: "When the Exchange organization includes Exchange 2007 or 2010 servers"
       isCorrect: true
       explanation: "This answer is correct. OAuth must be manually configured when your Exchange organization includes Exchange 2007 or 2010 servers. The Hybrid Configuration Wizard doesn't configure OAuth in this situation."
     - content: "If Azure AD Connect isn't running"
       isCorrect: false
-      explanation: "This answer is incorrect. This item isn't a reason why an organization must manually configure OAuth. Try again."
+      explanation: "This answer is incorrect. This item isn't a reason why an organization must manually configure OAuth."
   - content: "Which of the following items is a prerequisite that must be satisfied to enable Public Folder coexistence with Microsoft 365?"
     choices:
     - content: "Outlook Anywhere must be enabled and functional on the on-premises Exchange servers"
@@ -46,7 +46,7 @@ quiz:
       explanation: "This answer is correct. To configure Public Folder coexistence with Microsoft 365, Outlook Anywhere must be enabled and functional on the on-premises Exchange servers."
     - content: "Each server that hosts a Public Folder database requires the Client Access services role to be installed"
       isCorrect: false
-      explanation: "This answer is incorrect. This item is a prerequisite for legacy Public Folder coexistence. Try again."
+      explanation: "This answer is incorrect. This item is a prerequisite for legacy Public Folder coexistence."
     - content: "One mailbox database must be created per Exchange server that holds Public Folder databases"
       isCorrect: false
-      explanation: "This answer is incorrect. This item is a prerequisite for legacy Public Folder coexistence. Try again."
+      explanation: "This answer is incorrect. This item is a prerequisite for legacy Public Folder coexistence."
