--- a/learn-m365-pr/wwl/implement-advanced-hybrid-functionality/2-manage-hybrid-deployment.yml
+++ b/learn-m365-pr/wwl/implement-advanced-hybrid-functionality/2-manage-hybrid-deployment.yml
@@ -4,7 +4,7 @@ title: Manage a hybrid deployment
 metadata:
   title: Manage a hybrid deployment
   description: "Manage a hybrid deployment"
-  ms.date: 03/09/2022
+  ms.date: 05/04/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -24,7 +24,7 @@ quiz:
       explanation: "This answer is correct. The Microsoft Remote Connectivity Analyzer (RCA) is a Microsoft tool that can verify your configuration, such as the Exchange Web Services or Exchange ActiveSync settings, and ensure that all settings are configured properly. Because a hybrid deployment uses those services to communicate between Exchange Online and on-premises, an organization should occasionally run the RCA to verify that its configuration hasn't changed in any way."
     - content: "Monitor message routings to ensure messages flow successfully and don't queue somewhere"
       isCorrect: false
-      explanation: "This answer is incorrect. This item won't verify that your configuration settings are configured properly. Try again."
+      explanation: "This answer is incorrect. This item won't verify that your configuration settings are configured properly."
     - content: "Deploy monitoring software to monitor the federated delegation"
       isCorrect: false
-      explanation: "This answer is incorrect. This item won't verify that your configuration settings are configured properly. Try again."
+      explanation: "This answer is incorrect. This item won't verify that your configuration settings are configured properly."
